# GeneralLotkaVolterra-rs

./: .gitignore  Cargo.toml  README.md
docs/: solvers.md  state.md  tasks.md
examples/: lv_diffusive_deterministic.rs  replicator_demographic.rs  replicator_deterministic.rs  replicator_diffusive_deterministic.rs
examples/common/: constants.rs  mod.rs  plotter.py  render_from_output.py  watch_and_render.py
examples/plotting/: plotter.py  render_from_output.py  test_render_from_output.py  watch_and_render.py
src/: examples.rs  lib.rs  main.rs  noise.rs  solver.rs  state.rs  tasks.rs  tests.rs  utils.rs
src/examples/: replicator_demographic.rs  replicator_deterministic.rs
src/io/: mod.rs  signal.rs  space.rs
src/solvers/: mod.rs  spatial.rs  termination.rs
src/solvers/non_spatial/: mod.rs  noise.rs  rk4.rs
src/solvers/spatial/: mod.rs  rk4.rs
src/state/: mod.rs  system_state.rs  time_series.rs
src/tasks/: lv_demographic.rs  lv_deterministic.rs  lv_diffusive_deterministic.rs  metadata.rs  mod.rs  replicator_demographic.rs  replicator_deterministic.rs  replicator_diffusive_deterministic.rs
src/tests/: non_spatial.rs
tests/outputs/non_spatial/demographic_gaussian/: 10000.json  20000.json  30000.json  40000.json  50000.json
tests/outputs/non_spatial/no_noise/: 0.json  10000.json  20000.json  30000.json  40000.json  50000.json
tests/outputs/non_spatial/proportional_gaussian/: 10000.json  20000.json  30000.json  40000.json  50000.json
