[package]
name = "general-lotka-volterra-rs"
version = "0.0.1"
edition = "2024"

description = "High-performance vectorized Lotka-Volterra & Replicator type dynamics solver."
license = "MIT OR Apache-2.0"  

readme = "README.md"
repository = "https://github.com/dingyisun0101/GeneralLotkaVolterra-rs/"
homepage = "https://github.com/dingyisun0101/GeneralLotkaVolterra-rs/"
documentation = "https://github.com/dingyisun0101/GeneralLotkaVolterra-rs/"
keywords = ["physics", "ecology", "math", "scientific", "SDE"]
categories = ["science"]

[dependencies]
# Random number generation
rand = { version = "0.9.2", features = ["std", "small_rng"] }
rand_distr = "0.5.1"
rand_chacha = "0.9.0"

# Parallelism & N-dimensional arrays
rayon = "1.11.0"
crossbeam = "0.8.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"

# Physics & Math
num-traits = "0.2.19"
ndarray = { version = "0.17", features = ["rayon", "serde"] }
ndarray-linalg = { version = "0.18", features = ["openblas-static"] } 

# Utility libraries
indicatif = "0.18.3"
logger_bro = "0.3.0"
once_cell = "1.21" 
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true 
codegen-units = 1
